try fix 100% width on smaller screen

--- a/filter-element.css
+++ b/filter-element.css
@@ -8,7 +8,8 @@ input[type="radio"] {
 }
 
 label {
-  width: 100px;
+  width: 100%;
+  max-width: 100px;
   background:#ffffff;
   color:#222222;
   padding: 0.5rem;
