--- a/grid.css
+++ b/grid.css
@@ -1,9 +1,3 @@
-*{
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-}
-
 @media only screen and (min-width: 860px){
 	.escapehatch{
 		display: none;
@@ -19,14 +13,6 @@
 
 	#logo-hidden{
 		display: block;
-	}
-
-	.intro-tekst{
-		max-width: 500px;
-	}
-
-	.intro-box{
-		align-items: center;
 	}
 
 }
